# mygame

./: CMakeLists.txt  Makefile  replay.txt  scores.txt
assets/: map.txt
inc/: Animal.hpp  Constants.hpp  Constraints.hpp  Enemy.hpp  Farm.hpp  Game.hpp  GameObject.hpp  GameState.hpp  Map.hpp  Menu.hpp  Physics.hpp  Physiscs.hpp  Player.hpp  ReplayManager.hpp  ReplaySystem.hpp  Score.hpp  ScoreManager.hpp  TexureManager.hpp  Timer.hpp  Vec2.hpp  common.hpp
src/: Animal.cpp  Enemy.cpp  Farm.cpp  Game.cpp  GameObject.cpp  Main.cpp  Map.cpp  Menu.cpp  Physics.cpp  Player.cpp  ReplayManager.cpp  ReplaySystem.cpp  Score.cpp  ScoreManager.cpp  TextureManager.cpp  TexureManager.cpp  Timer.cpp
src/core/: Game.cpp  Game.h  main.cpp
src/entities/: Player.h
src/states/: ArenaState.h
